--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<div> "My current favourite song is [song_name]" where [song_name] should be replaced with your actual favourite song name. </div>
 </body>
 
 </html>
