--- a/main.html
+++ b/main.html
@@ -10,7 +10,9 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-<div> "My current favourite song is [song_name]" where [song_name] should be replaced with your actual favourite song name. </div>
+<div>
+	<h1>"My current favourite song is [kyun]" </h1> 
+</div>
 </body>
 
 </html>
